--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   image_picker:
   path_provider:
   flutter_secure_storage:
+  google_maps_flutter:
+  background_location: 0.6.0
+  permission_handler:
+  flutter_svg: ^0.22.0
+  flutter_dotenv:
 
 
 dev_dependencies:
@@ -66,6 +71,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
